--- a/afis_api_project/style.css
+++ b/afis_api_project/style.css
@@ -18,5 +18,28 @@ body, html {
       /*background-image: linear-gradient(rgba(192, 192, 192, 0.3), rgba(192, 192, 192, 0.3)), url("background.jpg");*/
 }
 
+.shining {
+    position: relative;
+    font-family: sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1em;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
+@keyframes animate {
+    0% {
+        background-position: -500%
+    }
+    100% {
+        background-position: 500%
+    }
+}
 
