--- a/afis_api_project/style.css
+++ b/afis_api_project/style.css
@@ -43,3 +43,94 @@ body, html {
     }
 }
 
+/* ------------- My photos Section --------------- */
+
+.pics ul {
+    position: relative;
+    top: 210%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 15%;
+    padding: 0;
+    width: 600px;
+    height: 150px;
+
+}
+
+.pics ul li {
+    list-style: none;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background: #000;
+    margin: -100px;
+    transform: rotate(45deg);
+    transition: .5s;
+    overflow: hidden;
+    opacity: .9;
+}
+
+.pics ul li:hover {
+    box-shadow: 10px 10px 5px #aaaaaa;
+    opacity: 2;
+}
+
+.pics ul li.item1 {
+    top: 0;
+    left: 0;
+}
+
+.pics ul li.item2 {
+    bottom: 0;
+    left: 25%;
+}
+
+.pics ul li.item3 {
+    top: 0;
+    left: 50%;
+}
+
+.pics ul li.item4 {
+    bottom: 0;
+    left: 75%;
+}
+
+.pics ul li.item5 {
+    top: 0;
+    left: 100%;
+}
+
+.pics ul li .bg {
+    width: 100%;
+    height: 100%;
+    transform: rotate(-45deg) scale(1.42);
+}
+
+.pics ul li.item1 .bg {
+    background: url(profile.jpg);
+    background-size: cover;
+}
+
+.pics ul li.item2 .bg {
+    background: url(ocean_one.jpg);
+    background-size: cover;
+}
+
+.pics ul li.item3 .bg {
+    background: url(one.jpg);
+    background-size: cover;
+}
+
+.pics ul li.item4 .bg {
+    background: url(profile3.jpg);
+    background-size: cover;
+}
+
+.pics ul li.item5 .bg {
+    background: url(profile4.jpg);
+    background-size: cover;
+}
+
+/* ------------- FB-Comments Section --------------- */
+
+
