--- a/afis_api_project/style.css
+++ b/afis_api_project/style.css
@@ -56,6 +56,43 @@ body, html {
     }
 }
 
+/* ------------- Skill Set Section --------------- */
+
+.cool-stuff {
+    width: 100px;
+    height: 100px;
+    margin: 0 10px;
+    border-radius: 50%;
+    padding: 6px;
+    box-sizing: border-box;
+    text-decoration: none;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 3);
+    background: linear-gradient(0deg, #ddd, #fff);
+    transition: .5s
+}
+
+.cool-stuff:hover {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 3);
+}
+
+.cool-stuff .fa {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: linear-gradient(0deg, #fff, #ddd);
+    border-radius: 50%;
+    line-height: calc(60px -24px);
+    font-size: 40px;
+    color: #262626;
+    transition: .5s;
+}
+
+.cool-stuff:hover .fa {
+    color: #4682B4;
+}
+
+
 /* ------------- My photos Section --------------- */
 
 .pics ul {
